--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Rubik:wght@300..900&display=swap");
+
 @import "tailwindcss";
+
+/* @theme {
+  --color-blackdark: "var(--color-ec-black-dark)";
+} */
+
+* {
+  font-family: "Outfit", sans-serif;
+}
